--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <style>
+            p{text-align: center;}
+            body {background:#f9faeafd}
+            em strong{color:green}
+            #banner{width: 100%;}
+        </style>
+        <meta charset="UTF-8">
+        <title>Livraria Sandyele</title>
+    </head>
+    <body>
+        <img id="banner" src="https://i.pinimg.com/originals/8b/e9/28/8be928fc94b25b315b26f3c1daff201b.jpg">
+        
+        <h1 style="text-align:center;">Sobre a Livraria Sandyele</h1>
 
+        <p>Localizada no coração da cidade a <strong>Livraria Sandyele</strong> traz para os leitores o que há de melhor na sessão literária. 
+        Fundada em 2022, a Livraria Sandyele já é destaque na cidade e conquista novos clientes à cada dia.</p>
+
+        <p style="font-size:20px;"><em>Em nossa livraria temos: <strong>Os melhores livros de romance, terror, suspense, ficção científica, distopia e muitos outros gêneros</strong>.</em></p>
+
+        <p>Oferecemos os melhores descontos dos melhores livros já publicados.
+        Venha e encontre seu novo livro preferido por um preço que cabe no seu bolso.</p>
+    </body>
+</html>
